# examples

./: README.md
.github/workflows/: build.yml
cpp/hello-crow/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
dotnet/hello-aspnet/: .dockerignore  .gitignore  Dockerfile  Program.cs  README.md
elixir/hello-phoenix/: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
go/hello-fiber/: .gitignore  Dockerfile  README.md  go.mod  main.go
go/hello-gin/: README.md  go.mod  main.go
jvm/hello-ktor/: Dockerfile  README.md  build.gradle.kts
jvm/hello-quarkus/: .dockerignore  .gitignore  Dockerfile  README.md  mvnw  pom.xml
jvm/hello-spring/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  gradlew
node/hello-astro/: Dockerfile  README.md  package.json
node/hello-express/: Dockerfile  README.md  app.js  package.json
node/hello-hono/: Dockerfile  README.md  app.js  package.json
node/hello-nestjs/: .dockerignore  .gitignore  Dockerfile  README.md  package.json
node/hello-nextjs/: .dockerignore  .gitignore  Dockerfile  README.md  package.json
node/hello-nuxt/: .dockerignore  .gitignore  Dockerfile  README.md  app.vue  package.json
node/hello-remix/: .gitignore  Dockerfile  README.md  package.json  tsconfig.json
node/hello-svelte/: .gitignore  Dockerfile  README.md  package.json
php/hello-laravel/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  composer.json
python/hello-django/: Dockerfile  README.md  manage.py
python/hello-fastapi/: Dockerfile  README.md  main.py
(+60 files in other folders)
